[bdist_wheel]
universal=1

[metadata]
description_file = README.md
long_description_content_type=text/markdown

[flake8]
ignore=E203, W503
max-line-length=1000
exclude=iexexamples/tests/
per-file-ignores=
    iexexamples/__init__.py:F401,F403
    iexexamples/dash/__init__.py:F401
    iexexamples/dash/timeseries_downloader/__init__.py:F401
    iexexamples/dash/yield_curve/__init__.py:F401
